# deadline-cloud-for-maya

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  depsBundle.py  depsBundle.sh  hatch.toml  pyproject.toml  requirements-testing.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/actions/bump_precommit_hook/: action.yaml
.github/actions/prepush_release_hook/: action.yaml
.github/workflows/: e2e_test.yml  integ_test.yml  publish_release.yml  release_bump.yml  release_publish.yml  reuse_python_build.yml
docs/: software_arch.md
install_builder/: deadline-cloud-for-maya.xml
job_bundle_output_tests/cube/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/cube/scene/: cube.ma
job_bundle_output_tests/layers/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/layers/scene/: layers.ma
job_bundle_output_tests/layers_no_variation/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/layers_no_variation/scene/: layers_no_variation.ma
job_bundle_output_tests/referenced_layers/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/referenced_layers/scene/: ref.ma  referenced_layers.ma  scene_file_to_reference.ma
job_bundle_output_tests/renderman/expected_job_bundle/: asset_references.yaml  parameter_values.yaml  template.yaml
job_bundle_output_tests/renderman/scene/: deadline_logo_48x48.png.tex  renderman.ma  scene_file_to_reference.mb
maya_submitter_plugin/: DeadlineCloudForMaya.mod
maya_submitter_plugin/plug-ins/: DeadlineCloudForMaya.py
scripts/: _project.py  add_copyright_headers.sh  build_wheels.sh  create_adaptor_packaging_artifact.sh  install_dev_submitter.py
src/deadline/maya_adaptor/MayaAdaptor/: __main__.py  adaptor.py
src/deadline/maya_adaptor/MayaAdaptor/schemas/: init_data.schema.json  run_data.schema.json
src/deadline/maya_adaptor/MayaClient/: __init__.py  dir_map.py  maya_client.py
src/deadline/maya_adaptor/MayaClient/render_handlers/: __init__.py  arnold_handler.py  default_maya_handler.py  renderman_handler.py  vray_handler.py
src/deadline/maya_submitter/: adaptor_override_environment.yaml  assets.py  assets_renderman.py  cameras.py  data_classes.py  deadline_submitter_for_renderman.py  default_maya_job_template.yaml  default_renderman_job_template.yaml  file_path_editor.py  job_bundle_output_test_runner.py  logging.py  maya_render_submitter.py  mel_commands.py  persistent_dataclass.py  render_layers.py  renderers.py  scene.py  shelf.py
src/deadline/maya_submitter/data_classes/: render_submitter_settings.py
src/deadline/maya_submitter/data_classes_renderman/: render_submitter_settings.py
src/deadline/maya_submitter/ui/components/: scene_settings_tab.py  scene_settings_tab_renderman.py
src/deadline_adaptor_for_maya/MayaAdaptor/: MayaAdaptor.json  __init__.py  __main__.py  adaptor.py
src/deadline_adaptor_for_maya/MayaAdaptor/schemas/: init_data.schema.json  run_data.schema.json
src/deadline_adaptor_for_maya/MayaClient/: __init__.py  maya_client.py
src/deadline_adaptor_for_maya/MayaClient/pymel_additions/: __init__.py  dir_map.py
src/deadline_adaptor_for_maya/MayaClient/render_handlers/: __init__.py  arnold_handler.py  get_render_handler.py  maya_handler_base.py  render_handler_interface.py
src/deadline_submitter_for_maya/: Deadline.mod  __init__.py
src/deadline_submitter_for_maya/config/: shelf.json
src/deadline_submitter_for_maya/plugins/: DeadlineSubmitter.py
src/deadline_submitter_for_maya/scripts/aws_deadline/: __init__.py  assets.py  cameras.py  color_management.py  config.py  render_layers.py  scene.py  shelf.py  utils.py
src/deadline_submitter_for_maya/scripts/aws_deadline/commands/: __init__.py  maya_render_submitter.py  renderSubmitter.py
src/deadline_submitter_for_maya/scripts/aws_deadline/data_classes/: render_submitter_settings.py
src/deadline_submitter_for_maya/scripts/aws_deadline/pymel_additions/: __init__.py  file_path_editor.py
src/deadline_submitter_for_maya/scripts/aws_deadline/renderers/: __init__.py
src/deadline_submitter_for_maya/scripts/aws_deadline/ui/components/: scene_settings_tab.py
test/deadline_adaptor_for_maya/: README.md  maya-test.ma
test/deadline_adaptor_for_maya/unit/: __init__.py
test/deadline_adaptor_for_maya/unit/MayaAdaptor/: test_adaptor.py
test/deadline_adaptor_for_maya/unit/MayaClient/: test_client.py  test_dir_map.py
test/deadline_adaptor_for_maya/unit/MayaClient/render_handlers/: mock_stubs.py  test_arnold_handler.py  test_get_render_handler.py  test_maya_handler_base.py  test_renderman_handler.py  test_vray_handler.py
test/deadline_submitter_for_maya/: README.md
test/deadline_submitter_for_maya/unit/: __init__.py
test/deadline_submitter_for_maya/unit/plugins/: test_deadline_submitter_maya.py
test/deadline_submitter_for_maya/unit/scripts/: test_assets.py  test_scene.py  test_utils.py  testing_utilities.py
test/deadline_submitter_for_maya/unit/scripts/aws_deadline/: test_persistent_dataclass.py  test_utils.py
test/deadline_submitter_for_maya/unit/scripts/aws_deadline/commands/: test_maya_render_submitter.py  test_render_submitter.py
