[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "deadline-cloud-for-maya"
dynamic = ["version"]
readme = "README.md"
license = ""
requires-python = ">=3.7"

dependencies = [
    "deadline == 0.16.*",
    "openjobio == 0.8.*",
]

[project.scripts]
MayaAdaptor = "deadline_adaptor_for_maya.MayaAdaptor:main"

[tool.hatch.build]
artifacts = [
  "*_version.py",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.hooks.custom]
path = "hatch_version_hook.py"

[[tool.hatch.build.hooks.custom.copy_map]]
sources = [
  "_version.py",
]
destinations = [
  "src/deadline_adaptor_for_maya",
  "src/deadline_submitter_for_maya",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/*",
    "hatch_version_hook.py",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/deadline_adaptor_for_maya",
  "src/deadline_submitter_for_maya",
]

[tool.mypy]
python_version = 3.9
check_untyped_defs = true
show_error_codes = true
pretty = true
files = [ "src/**/*.py" ]

[[tool.mypy.overrides]]
module = ["pymel.*","maya.*","PySide2.*"]
ignore_missing_imports = true

[tool.ruff]
ignore = [
  "E501",
]
line-length = 100

[tool.ruff.isort]
known-first-party = [
  "deadline_worker_agent"
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
    "--durations=5",
    "--cov=src/deadline_adaptor_for_maya",
    "--cov=src/deadline_submitter_for_maya",
    "--color=yes",
    "--cov-report=html:build/coverage",
    "--cov-report=xml:build/coverage/coverage.xml",
    "--cov-report=term-missing",
    "--numprocesses=auto",
]
testpaths = [ "test" ]
looponfailroots = [
    "src",
    "test",
]
# looponfailroots is deprecated, this removes the deprecation from the test output
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source_pkgs = [ "deadline_adaptor_for_maya", "deadline_submitter_for_maya" ]
branch = true
parallel = true
omit = [
  "**/__main__.py",
  "**/_version.py",
  "*/deadline_submitter_for_maya/scripts/aws_deadline/ui/*",
  "*/deadline_submitter_for_maya/scripts/aws_deadline/shelf.py"
]


[tool.coverage.paths]
source = [
  "src/"
]

[tool.coverage.report]
show_missing = true
fail_under = 75
