[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "deadline-cloud-for-maya"
dynamic = ["version"]
readme = "README.md"
license = ""
requires-python = ">=3.7"

dependencies = [
    "deadline == 0.20.*",
    "openjobio == 0.8.*",
]

[project.scripts]
MayaAdaptor = "deadline.maya_adaptor.MayaAdaptor:main"

[tool.hatch.build]
artifacts = [
  "*_version.py",
]

[tool.hatch.build.targets.wheel.force-include]
"./maya_submitter_plugin" = "deadline/maya_submitter/maya_submitter_plugin"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.hooks.custom]
path = "hatch_custom_hook.py"

[tool.hatch.build.hooks.custom.copy_version_py]
destinations = [
  "src/deadline/maya_adaptor",
  "src/deadline/maya_submitter",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/*",
    "hatch_custom_hook.py",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/deadline",
]

[tool.mypy]
python_version = 3.9
check_untyped_defs = true
show_error_codes = true
pretty = true
files = [ "src/**/*.py" ]
ignore_missing_imports = true
# Tell mypy that there's a namespace package at src/deadline
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["maya.*","PySide2.*"]

[tool.ruff]
ignore = [
  "E501",
]
line-length = 100

[tool.ruff.isort]
known-first-party = [
  "deadline_worker_agent"
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
    "--durations=5",
    "--cov=src/deadline/maya_adaptor",
    "--cov=src/deadline/maya_submitter",
    "--color=yes",
    "--cov-report=html:build/coverage",
    "--cov-report=xml:build/coverage/coverage.xml",
    "--cov-report=term-missing",
    "--numprocesses=auto",
]
testpaths = [ "test" ]
looponfailroots = [
    "src",
    "test",
]
# looponfailroots is deprecated, this removes the deprecation from the test output
filterwarnings = [
    "ignore::DeprecationWarning"
]
pythonpath = [
  # The Maya submitter plugin isn't structured like a Python package
  "maya_submitter_plugin/plug-ins"
]

[tool.coverage.run]
source_pkgs = [ "deadline/maya_adaptor", "deadline/maya_submitter", "maya_submitter_plugin/plugins" ]
branch = true
parallel = true
omit = [
  "**/__main__.py",
  "**/_version.py",
  "*/deadline/maya_submitter/ui/*",
  "*/deadline/maya_submitter/shelf.py"
]


[tool.coverage.paths]
source = [
  "src/",
  "maya_submitter_plugin/plugins/"
]

[tool.coverage.report]
show_missing = true
fail_under = 50
